syntax = "proto3";

package rivet.backend.pkg.ds.msg.undrain_all;

import "resources/legacy/proto/common.proto";

/// name = "msg-ds-undrain-all"
/// parameters = [
/// 	{ name = "client_id" },
/// ]
message Message {
	optional string nomad_node_id = 1;
	optional string pegboard_client_id = 3;
}
